tests/baselines/reference/externalModuleWithoutCompilerFlag1.errors.txt
tests/cases/compiler/externalModuleWithoutCompilerFlag1.ts(3,17): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/compiler/externalModuleWithoutCompilerFlag1.ts (1 errors) ====
    
    // Not on line 0 because we want to verify the error is placed in the appropriate location.
      export module M {
                    ~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    }